--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,17 @@
 * {
   box-sizing: border-box;
+  font-family: "Space Grotesk", sans-serif;
+  font-family: "Cardo", serif;
+}
+
+body {
+  width: 100vw;
 }
 
 .container {
   width: 65%;
   margin: 0 auto;
+  background-color: rgb(234, 234, 234);
 }
 
 .header {
@@ -27,11 +34,68 @@
     list-style: none;
     border: 1px solid black;
     width: 100%;
+    & li {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      list-style: none;
+      width: 100%;
+      font-family: "Space Grotesk", sans-serif;
+    }
   }
 
   &__runner-list {
     display: flex;
     justify-content: space-around;
+  }
+
+  &__nav--user {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    padding: 30px;
+  }
+
+  &__nav-link {
+    color: black;
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 500;
+    margin-right: 15px;
+    width: 40px;
+  }
+  &__nav-sign {
+    color: white;
+    font-family: "Space Grotesk", sans-serif;
+    font-size: 16px;
+    background-color: black;
+    border-radius: 20px;
+    font-weight: 400;
+    border: none;
+    padding: 5px;
+    width: 75px;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  &__nav-login {
+    color: white;
+    font-family: "Space Grotesk", sans-serif;
+    font-size: 16px;
+    background-color: black;
+    border-radius: 20px;
+    font-weight: 400;
+    border: none;
+    padding: 5px;
+    width: 75px;
+    margin-left: 15px;
+  }
+
+  &__nav--sections {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style: none;
+    width: 100%;
+    font-family: "Space Grotesk", sans-serif;
   }
 }
 
@@ -75,6 +139,19 @@
   }
 }
 
+.section-title {
+  display: flex;
+  flex-direction: column;
+  width: 66%;
+  border: 1px black solid;
+  justify-content: center;
+  padding: 20px;
+  &__cards {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+
 .footer {
   display: flex;
   flex-direction: column;
@@ -89,5 +166,21 @@
     display: flex;
     flex-direction: column;
     border: 1px solid black;
+  }
+}
+
+.main-title {
+  display: flex;
+  flex-direction: row;
+
+  &__aside-left {
+    width: 33%;
+    border: 1px black solid;
+    display: flex;
+  }
+  &__aside-name {
+    border-bottom: 1px solid black;
+    width: 100%;
+    height: 70px;
   }
 }
