change DetailPage so that it switches between thre types and adapted header test to router

--- a/src/App.scss
+++ b/src/App.scss
@@ -102,6 +102,10 @@ body {
     border: 1px solid black;
     width: 66%;
   }
+  &__big-image {
+    width: 300px;
+    height: 300px;
+  }
   &__aside {
     display: flex;
     flex-direction: column;
