--- a/src/App.scss
+++ b/src/App.scss
@@ -121,6 +121,36 @@ body {
   }
 }
 
+.main-title {
+  display: flex;
+  flex-direction: row;
+
+  &__aside-left {
+    width: 33%;
+    border: 1px black solid;
+    display: flex;
+  }
+  &__aside-name {
+    border-bottom: 1px solid black;
+    width: 100%;
+    height: 70px;
+  }
+}
+
+.main-article {
+  display: flex;
+  &__aside-left {
+    width: 33%;
+    border: 1px black solid;
+    display: flex;
+    flex-direction: column;
+  }
+  &__aside-name {
+    border-bottom: 1px solid black;
+    width: 100%;
+    height: 70px;
+  }
+}
 .section {
   &__cards {
     display: flex;
@@ -162,36 +192,6 @@ body {
     display: flex;
     flex-direction: column;
     border: 1px solid black;
-  }
-}
-
-.main-title {
-  display: flex;
-  flex-direction: row;
-
-  &__aside-left {
-    width: 33%;
-    border: 1px black solid;
-    display: flex;
-  }
-  &__aside-name {
-    border-bottom: 1px solid black;
-    width: 100%;
-    height: 70px;
-  }
-}
-
-.main-article {
-  display: flex;
-  &__aside-left {
-    width: 33%;
-    border: 1px black solid;
-    display: flex;
-  }
-  &__aside-name {
-    border-bottom: 1px solid black;
-    width: 100%;
-    height: 70px;
   }
 }
 
