--- a/src/App.scss
+++ b/src/App.scss
@@ -26,22 +26,25 @@ body {
   }
 
   &-logo {
-    width: 55%;
+    width: 50%;
+    padding: 50px;
   }
 
   &-actions {
     .header-user-area {
       display: flex;
-      align-items: flex-end;
-      justify-content: flex-end;
-      padding: 30px;
+      align-items: space-around;
+      justify-content: space-around;
+      padding-top: 15px;
+      padding-bottom: 15px;
 
       &__my-news {
         color: black;
         font-family: "Space Grotesk", sans-serif;
         font-weight: 500;
-        margin-right: 15px;
+
         width: 40px;
+        white-space: nowrap;
       }
 
       &__button {
@@ -57,7 +60,6 @@ body {
 
         &--sing-up {
           margin-left: 15px;
-          margin-right: 15px;
         }
         &--login {
           margin-left: 15px;
@@ -124,8 +126,38 @@ body {
     border: 1px solid black;
   }
   &__card {
-    border: 1px solid black;
+    position: relative;
+
+    &__image {
+      width: 100px;
+      height: 100px;
+    }
   }
+
+  ::after {
+    content: "";
+    background: black;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 1px;
+    -webkit-transform: scaleY(0.7);
+    transform: scaleY(0.7);
+  }
+
+  ::before {
+    content: "";
+    background: black;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 100%;
+    width: 1px;
+    -webkit-transform: scaleY(0.7);
+    transform: scaleY(0.7);
+  }
+
   &__container-title {
     border: 1px solid black;
   }
@@ -203,4 +235,10 @@ body {
     flex-direction: row;
     justify-content: space-between;
   }
+}
+
+footer {
+  background-color: black;
+  color: white;
+  font-family: "Cardo", serif;
 }
