Added testing HomePage and icons

--- a/src/App.scss
+++ b/src/App.scss
@@ -246,3 +246,12 @@ footer {
   color: white;
   font-family: "Cardo", serif;
 }
+
+.show {
+  display: inline;
+  cursor: pointer;
+}
+.notShow {
+  display: none;
+  cursor: pointer;
+}
