--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,41 @@
 * {
   box-sizing: border-box;
-  font-family: "Space Grotesk", sans-serif;
-  font-family: "Cardo", serif;
 }
 
 body {
   width: 100vw;
 }
 
+.goUp {
+  transition: all 0.25s ease-in-out;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  display: inline-flex;
+
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  margin: 0 3em 3em 0;
+  border-radius: 50%;
+  padding: 0.25em;
+  width: 80px;
+  height: 80px;
+  background-color: #f8f8f8;
+}
+
 .container {
-  width: 65%;
+  width: 900px;
   margin: 0 auto;
   background-color: rgb(234, 234, 234);
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  font-size: 15px;
+  font-family: "Space Grotesk", sans-serif;
+  text-transform: uppercase;
 }
 
 .header {
@@ -93,39 +117,135 @@ body {
   }
 }
 
-.main {
-  &__news {
-    display: flex;
-    border: 1px solid black;
+.main__content {
+  display: flex;
+  flex-direction: row;
+}
+.main__news {
+  display: flex;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 45px;
+  padding-top: 30px;
+  width: 66%;
+  img {
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
   }
-  &__big {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid black;
-    width: 66%;
-  }
-  &__big-image {
-    width: 300px;
-    height: 300px;
-  }
-  &__aside {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid black;
-    width: 33%;
-  }
-  &__aside-top {
-    border-bottom: 1px solid black;
-    height: 33%;
-  }
-  &__more {
-    display: flex;
+
+  &:hover img {
+    cursor: pointer;
+    filter: none;
   }
 }
 
-.main-title {
+.main__big {
+  display: flex;
+  flex-direction: column;
+
+  &-image {
+    width: 500px;
+    height: 500px;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.main__aside {
+  display: flex;
+  flex-direction: column;
+  border-left: 0.5px solid black;
+  width: 33%;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+
+  &-image {
+    width: 220px;
+    height: 130px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &-top {
+    border-bottom: 1px solid black;
+    height: 35%;
+    width: 100%;
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-top: 15px;
+  }
+
+  &-bottom {
+    height: 66%;
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-top: 45px;
+    img {
+      -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+      filter: grayscale(100%);
+    }
+
+    &:hover img {
+      cursor: pointer;
+      filter: none;
+    }
+  }
+}
+.main__more {
+  display: flex;
+  font-family: "Space Grotesk", sans-serif;
+  flex-direction: row;
+  align-items: center;
+  color: black;
+  text-decoration: none;
+  display: flex;
+}
+
+.main__read-later {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+
+  & p {
+    margin-left: 5px;
+    text-decoration: underline;
+    font-size: 13px;
+    cursor: pointer;
+    white-space: nowrap;
+  }
+}
+
+.main__more__read-medium {
+  white-space: nowrap;
+  margin-right: 10px;
+}
+
+.main__more__read {
+  margin-right: 35px;
+}
+.main__more__card {
+  display: flex;
+  font-family: "Space Grotesk", sans-serif;
+  text-transform: uppercase;
+  color: black;
+  text-decoration: none;
+
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.main__title {
+  display: flex;
+  flex-direction: row;
+  font-family: "Cardo", italic;
+  font-weight: 300;
+  font-size: 26px;
+  font-style: italic;
+  width: 100%;
 
   &__aside-left {
     width: 33%;
@@ -154,17 +274,45 @@ body {
   }
 }
 .section {
+  &__title {
+    font-family: "Space Grotesk", sans-serif;
+    font-size: 40px;
+    font-weight: 400;
+    margin-left: 30px;
+    padding: 0;
+    height: 20px;
+    display: flex;
+    align-items: center;
+  }
   &__cards {
     display: flex;
-    justify-content: space-around;
-    border: 1px solid black;
+    justify-content: center;
+    align-items: center;
+    border: px solid black;
+    overflow: hidden;
+    height: 300px;
   }
   &__card {
     position: relative;
+    width: 33%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    img {
+      -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+      filter: grayscale(100%);
+    }
+
+    &:hover img {
+      cursor: pointer;
+      filter: none;
+    }
 
     &__image {
-      width: 100px;
-      height: 100px;
+      padding: 10px;
     }
   }
 
@@ -193,7 +341,8 @@ body {
   }
 
   &__container-title {
-    border: 1px solid black;
+    border-top: 0.5px black solid;
+    border-bottom: 0.5px black solid;
   }
 }
 
@@ -201,7 +350,8 @@ body {
   display: flex;
   flex-direction: column;
   width: 66%;
-  border: 1px black solid;
+  border-top: 0.5px black solid;
+  border-bottom: 0.5px black solid;
   justify-content: center;
   padding: 20px;
   &__cards {
