Created images folder in src

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
 
 body {
   width: 100vw;
-  background-image: url("../../public/images/fons.jpeg");
+  background-image: url("./images/fons2.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
 }
