Found notFoundPage file which was deleted

--- a/src/App.scss
+++ b/src/App.scss
@@ -241,7 +241,8 @@ a {
 }
 
 .main__more__read {
-  margin-right: 35px;
+  margin-right: 10px;
+  white-space: nowrap;
 }
 .main__more__card {
   display: flex;
