--- a/src/pages/MyNewsPage/MyNewsPage.scss
+++ b/src/pages/MyNewsPage/MyNewsPage.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .main-title__aside-name__mynews {
   height: 70px;
   display: flex;
@@ -12,6 +16,11 @@
   width: 100%;
   justify-content: space-around;
   flex-wrap: wrap;
+
+  .div .card__mynews {
+    height: 100%;
+    justify-content: space-evenly;
+  }
 }
 
 .main-title__aside-title__mynews {
@@ -27,11 +36,10 @@
   padding-left: 50px;
   padding-top: 50px;
   width: 66%;
-}
-
-.card__mynews {
-  margin-bottom: 40px;
-  margin-top: 40px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .createNew {
@@ -58,5 +66,22 @@
     font-weight: 400;
     background-color: transparent;
     cursor: pointer;
+  }
+}
+
+.card__mynews {
+  width: 33%;
+  font-family: "Cardo", italic;
+  font-size: 17px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  margin: 20px;
+  padding-bottom: 20px;
+  height: 265px;
+
+  & img {
+    justify-content: flex-start;
   }
 }
