--- a/src/App.scss
+++ b/src/App.scss
@@ -366,18 +366,6 @@ a {
     transform: scaleY(0.7);
   }
 
-  // ::before {
-  //   content: "";
-  //   background: black;
-  //   position: absolute;
-  //   bottom: 0;
-  //   right: 0;
-  //   height: 100%;
-  //   width: 1px;
-  //   -webkit-transform: scaleY(0.7);
-  //   transform: scaleY(0.7);
-  // }
-
   &__container-title {
     border-top: 0.5px black solid;
     border-bottom: 0.5px black solid;
@@ -501,76 +489,41 @@ a {
   }
 }
 
-// &__top-container {
-//   display: flex;
-//   font-family: "Space Grotesk", sans-serif;
-// }
-
-// &-logo {
-//   width: 50%;
-//   padding: 50px;
-//   border: none;
-// }
-
-// &-actions {
-//   width: 420px;
-
-//   .header-user-area {
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-around;
-//     padding-top: 15px;
-//     padding-bottom: 15px;
-//     border: none;
-
-//     &__my-news {
-//       color: black;
-//       font-family: "Space Grotesk", sans-serif;
-//       font-weight: 500;
-//       width: 40px;
-//       white-space: nowrap;
-//       margin-right: 10px;
-//       margin-left: 30px;
-
-//       &:hover {
-//         color: #f66e44;
-//       }
-//     }
-
-//     &__button {
-//       color: white;
-//       font-family: "Space Grotesk", sans-serif;
-//       font-size: 16px;
-//       background-color: black;
-//       border-radius: 20px;
-//       font-weight: 400;
-//       border: none;
-//       padding: 5px;
-//       width: 75px;
-//       &:hover {
-//         background-color: #f66e44;
-//       }
-//     }
-//   }
-//   .header-nav {
-//     &__list {
-//       display: flex;
-//       flex-direction: row;
-//       justify-content: space-around;
-//       list-style: none;
-//       width: 100%;
-//       padding-top: 30px;
-//       padding-bottom: 30px;
-//       padding-left: 30px;
-//       font-family: "Space Grotesk", sans-serif;
-//       li {
-//         display: flex;
-//         flex-direction: row;
-//         justify-content: space-around;
-//         list-style: none;
-//         width: 100%;
-//         font-family: "Space Grotesk", sans-serif;
-//       }
-//     }
-//   }
-// }
+@media (max-width: 420px) {
+  .header {
+    flex-direction: column;
+  }
+  .header__top-container {
+    flex-direction: column;
+  }
+  .header-user-area {
+    justify-content: left;
+  }
+  .header-nav__list {
+    justify-content: left;
+  }
+  .main__big {
+    flex-direction: column;
+  }
+  .main__big-image {
+    width: 300px;
+    height: 300px;
+  }
+  .header-bottom-container {
+    display: flex;
+  }
+  .main__title {
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+  }
+  .container {
+    display: flex;
+    flex-direction: column;
+    width: 415px;
+  }
+  .section__cards {
+    flex-direction: column;
+    align-items: center;
+  }
+}
