--- a/src/App.scss
+++ b/src/App.scss
@@ -194,6 +194,7 @@ a {
     width: 220px;
     height: 130px;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
   }
