Bugfix scss from App, DetailEditPage and MyNewspAGE

--- a/src/pages/MyNewsPage/MyNewsPage.scss
+++ b/src/pages/MyNewsPage/MyNewsPage.scss
@@ -71,7 +71,8 @@
 
 .card__mynews {
   width: 33%;
-  font-family: "Cardo", italic;
+  font-family: "Cardo", serif;
+  font-style: italic;
   font-size: 17px;
   display: flex;
   justify-content: space-between;
