--- a/src/App.scss
+++ b/src/App.scss
@@ -225,7 +225,6 @@ a {
   align-items: center;
   color: black;
   text-decoration: none;
-  display: flex;
 }
 
 .main__read-later {
@@ -258,8 +257,6 @@ a {
   text-transform: uppercase;
   color: black;
   text-decoration: none;
-
-  display: flex;
   justify-content: space-around;
   width: 100%;
 }
@@ -267,7 +264,7 @@ a {
 .main__title {
   display: flex;
   flex-direction: row;
-  font-family: "Cardo", italic;
+  font-family: "Cardo", serif;
   font-weight: 300;
   font-size: 30px;
   font-style: italic;
@@ -321,9 +318,9 @@ a {
   &__card {
     position: relative;
     width: 33%;
-    font-family: "Cardo", italic;
+    font-family: "Cardo", serif;
     font-size: 17px;
-
+    font-style: italic;
     display: flex;
     justify-content: center;
     align-items: center;
