--- a/src/pages/DetailEditPage/DetailEditPage.scss
+++ b/src/pages/DetailEditPage/DetailEditPage.scss
@@ -45,14 +45,16 @@ article {
 }
 
 .main__subtitle__detail {
-  font-family: "Cardo", italic;
+  font-family: "Cardo", serif;
+  font-style: italic;
   font-weight: 300;
   font-size: 24px;
   font-style: italic;
 }
 
 .main__text__detail {
-  font-family: "Cardo", italic;
+  font-family: "Cardo", serif;
+  font-style: italic;
   font-weight: 300;
   font-size: 19px;
   padding-right: 20px;
